fix paragraph spacing

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -268,7 +268,7 @@ form input:invalid {
 }
 
 .content > p {
-  @apply mb-8 leading-relaxed;
+  @apply leading-relaxed;
 }
 
 .content p > img {
